[tool.poetry]
name = "triton_guide"
version = "0.1.0"
description = ""
authors = ["i.fursov <i.fursov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.7.1"
allennlp = "2.6.0"
transformers = "4.8.2"
allennlp-models = "2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
